feat: add student api
