# internal/models/students.go
@@ -1,0 +1,13 @@
+package models
+
+import "time"
+
+type Student struct {
+	ID        string    `json:"id"`
+	FirstName string    `json:"first_name" binding:"required"`
+	LastName  string    `json:"last_name" binding:"required"`
+	Email     string    `json:"email" binding:"required,email"`
+	Age       int       `json:"age" binding:"gte=1,lte=150"`
+	CreatedAt time.Time `json:"created_at,omitempty"`
+	UpdatedAt time.Time `json:"updated_at,omitempty"`
+}
